--- a/00-main.tex
+++ b/00-main.tex
@@ -381,32 +381,18 @@ This chapter explains the basic mathematical components of the Number theory: gr
 
 
 
+\clearpage
 
-%\section{GLWE Input Vector Rotation}
-%\label{sec:glwe-input-rotation}
-%\input{c06-glwe-input-rotation}
-%\clearpage
+\section{Polynomial Ring}
+\label{sec:polynomial-ring}
+\input{a05-polynomial-ring}
 
+\clearpage
 
-\part{Fully Homomorphic Encryption Schemes}
-\label{part:fhe-schemes}
+\section{Decomposition}
+\label{sec:decomp}
+\input{a06-decomp}
 
-\renewcommand{\thesection}{D-\arabic{section}}
-\setcounter{section}{0}
-
-This chapter explains the four most well-known FHE schemes: TFHE, CKKS, BGV, and BFV, as well as their RNS-variant versions. 
-
-\newpage
-
-\section{TFHE Scheme}
-\label{sec:tfhe}
-\input{d01-tfhe}
-
-
-
-
-%\clearpage
-%\input{scratch}
 
 \clearpage
 
