--- a/d03-ckks.tex
+++ b/d03-ckks.tex
@@ -869,7 +869,7 @@ $\hat{\Delta} = \left\lceil\Delta^2\dfrac{\hat{q}}{q}\right\rfloor = \left\lceil
 
 $ $
 
-Note that after the rescaling, the plaintext scaling factor of $(\hat A, \hat B)$ is also updated to $\hat \Delta$. Meanwhile, $M$ and $S$ stay the same as before.
+Note that after the rescaling, the plaintext scaling factor of $(\hat A, \hat B)$ is also updated to $\hat{\Delta}$. Meanwhile, $M$ and $S$ stay the same as before.
 
 $ $
 
@@ -982,7 +982,7 @@ $\hat{\Delta} = \left\lceil\Delta^2\dfrac{\hat{q}}{q}\right\rfloor = \left\lceil
 $ $
 
 
-Note that after the rescaling, the ciphertext modulus changes from $q \rightarrow \hat q$, and the plaintext scaling factor of $(\hat A, \hat B)$ is also updated to $\hat \Delta$. Meanwhile, the plaintext $M$ and the secret key $S$ stay the same as before.
+Note that after the rescaling, the ciphertext modulus changes from $q \rightarrow \hat q$, and the plaintext scaling factor of $(\hat A, \hat B)$ is also updated to $\hat{\Delta}$. Meanwhile, the plaintext $M$ and the secret key $S$ stay the same as before.
 
 $ $
 
