Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -595,7 +595,7 @@ This chapter explains the four most well-known FHE schemes: TFHE, CKKS, BGV, and
 
 \section{BFV Scheme}
 \label{sec:bfv}
-\input{d02-bfv}
+%\input{d02-bfv}
 
 \newpage
 
