Updates from Overleaf

--- a/00-main.tex
+++ b/00-main.tex
@@ -588,7 +588,7 @@ This chapter explains the four most well-known FHE schemes: TFHE, CKKS, BGV, and
 
 \section{TFHE Scheme}
 \label{sec:tfhe}
-%\input{d01-tfhe}
+\input{d01-tfhe}
 
 
 \newpage
