Updates from Overleaf

--- a/d01-tfhe.tex
+++ b/d01-tfhe.tex
@@ -1160,3 +1160,10 @@ However, the 2nd step's non-linear functions cannot be expressed as addition and
 
 \subsection{TFHE on a Discrete Torus}
 \label{subsec:torus}
+
+\textbf{- Reference:} 
+\href{https://eprint.iacr.org/2021/1402.pdf}{Guide to
+Fully Homomorphic Encryption
+over the [Discretized] Torus}~\cite{torus}
+
+$ $
